# Fortran-git-version

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml
cmake/: GetGitRevisionDescription.cmake  get_git_version.cmake
example/: example.f90
src/: fortran_git_version.h.in  git_version.f90  git_version_impl.F90  git_version_impl.F90.in  version.h.in
test/: CMakeLists.txt  git_wrapper.sh  test.py  test_program.f90
